src/objects/MSA_Code__c.object
<CustomObject>
    <fields>
        <fullName>c_msa_description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <label>Quality Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>MSA Code</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MSA Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>